hdone/objects/AuditSettingMapping__mdt.object
<CustomObject>
    <description>Mappings for AuditSettings. Usually used for ConfirmationData and AuditReports</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Question category</description>
        <inlineHelpText>Question category</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappings</relationshipLabel>
        <relationshipName>AuditSettingMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <description>API name of field for mapping</description>
        <inlineHelpText>API name of field for mapping</inlineHelpText>
        <label>xFieldApiName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HitSettingTypeLookup__c</fullName>
        <description>Hit Setting Type</description>
        <inlineHelpText>Hit Setting Type</inlineHelpText>
        <label>xHitSettingType</label>
        <referenceTo>HitSettingType__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappings</relationshipLabel>
        <relationshipName>AuditSettingMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record is active.</description>
        <inlineHelpText>Indicates if record is active.</inlineHelpText>
        <label>xIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should customer display show as True?</description>
        <inlineHelpText>Should customer display show as True?</inlineHelpText>
        <label>xIsCustomerDisplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if field is required</description>
        <inlineHelpText>Is field required</inlineHelpText>
        <label>xIsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultiResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if question is multi response</description>
        <inlineHelpText>Indicates if question is multi response</inlineHelpText>
        <label>xMultiResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessStatus__c</fullName>
        <description>Processing status for question. Often used to indicate End or last question</description>
        <inlineHelpText>Processing status for question</inlineHelpText>
        <label>ProcessStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End</fullName>
                    <default>true</default>
                    <label>End</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <description>Object for Product</description>
        <inlineHelpText>Object for Product</inlineHelpText>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappings</relationshipLabel>
        <relationshipName>AuditSettingMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>QAStatus__c</fullName>
        <description>QA status for record</description>
        <inlineHelpText>QA status for record</inlineHelpText>
        <label>xQAStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Mapping__c</fullName>
        <label>Question Mapping</label>
        <referenceTo>Question_Mapping__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappings</relationshipLabel>
        <relationshipName>AuditSettingMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>Type of question usually for MTurk</description>
        <inlineHelpText>Type of question</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multi Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseCount__c</fullName>
        <description>Count of number of optimal valid responses for question</description>
        <label>ResponseCount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponseField__c</fullName>
        <description>Field name response is linked to. Used for remap</description>
        <inlineHelpText>Field name response is linked to</inlineHelpText>
        <label>ResponseField</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseObject__c</fullName>
        <description>EntityDefinition Object response is linked to. As of Summer 17 EntityDefinition not working correctly in Flows. Returning ID only. Object__r.DeveloperName not working.</description>
        <inlineHelpText>EntityDefinition Object response is linked to</inlineHelpText>
        <label>ResponseObject</label>
        <referenceTo>Object__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappings (ResponseObject)</relationshipLabel>
        <relationshipName>AuditSettingMappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>Indicates how responses are populated. Text means all values are contained in Repsonse Mapping as text values. Lookup requires lookup in the system</description>
        <label>xResponse Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Remap</fullName>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>Enables sorting of records found</description>
        <inlineHelpText>Enables sorting of records found</inlineHelpText>
        <label>xSort</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>AuditSettingMapping</label>
    <pluralLabel>AuditSettingMappings</pluralLabel>
</CustomObject>